@@ -4,12 +4,13 @@ import io.cucumber.plugin.event.Result;
 import io.cucumber.plugin.event.Status;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Helper class for extracting information from Cucumber test result objects
  */
 public class CucumberTestResultHelper {
+    private CucumberTestResultHelper() {
+    }
 
     /**
      * Checks if all steps passed
@@ -21,7 +22,7 @@ public class CucumberTestResultHelper {
         List<Result> passedSteps = testResults
                 .stream()
                 .filter(tr -> tr.getStatus() == Status.PASSED)
-                .collect(Collectors.toList());
+                .toList();
 
         return passedSteps.size() == testResults.size();
     }
